# cpp-build-example

./: .buckconfig  .gitignore  BUCK  BUILD.gn  CMakeLists.txt  README.md  all.sh  build.bfg  meson.build
src/executable/: BUCK
src/executable/main/: main.cpp
src/shared/: BUCK
src/shared/gtest/: add_test.cpp
src/shared/main/: add.cpp  mathematics.h  multiply.cpp
src/shared/test/: add_test.cpp  multiply_test.cpp  test.cpp
src/static/: BUCK
src/static/main/: greeting.cpp  greeting.h
src/static/test/: greeting_test.cpp  test.cpp
subprojects/: BUCK  BUILD.gn
