# ==================================================
# vars

gtest_version = "1.8.0"

gtest_dir = "googletest-release-$gtest_version/googletest"

gmock_dir = "googletest-release-$gtest_version/googlemock"

# ==================================================
# gtest

config("gtest_config") {
  visibility = [
    ":*",
    #"//testing/gmock:*",  # gmock also shares this config.
  ]
  defines = [
    # In order to allow regex matches in gtest to be shared between Windows
    # and other systems, we tell gtest to always use it's internal engine.
    "GTEST_HAS_POSIX_RE=0",
    # Chrome doesn't support / require C++11, yet.
    #"GTEST_LANG_CXX11=0",
  ]
  # Gtest headers need to be able to find themselves.
  include_dirs = [ "$gtest_dir/include" ]
  if (is_win) {
    cflags = [ "/wd4800" ]  # Unused variable warning.
  }
  if (is_posix) {
    defines += [
      # gtest isn't able to figure out when RTTI is disabled for gcc
      # versions older than 4.3.2, and assumes it's enabled.  Our Mac
      # and Linux builds disable RTTI, and cannot guarantee that the
      # compiler will be 4.3.2. or newer.  The Mac, for example, uses
      # 4.2.1 as that is the latest available on that platform.  gtest
      # must be instructed that RTTI is disabled here, and for any
      # direct dependents that might include gtest headers.
      "GTEST_HAS_RTTI=0",
    ]
  }
  if (is_android) {
    defines += [
      # We want gtest features that use tr1::tuple, but we currently
      # don't support the variadic templates used by libstdc++'s
      # implementation. gtest supports this scenario by providing its
      # own implementation but we must opt in to it.
      "GTEST_USE_OWN_TR1_TUPLE=1",
      # GTEST_USE_OWN_TR1_TUPLE only works if GTEST_HAS_TR1_TUPLE is set.
      # gtest r625 made it so that GTEST_HAS_TR1_TUPLE is set to 0
      # automatically on android, so it has to be set explicitly here.
      "GTEST_HAS_TR1_TUPLE=1",
    ]
  }
}
config("gtest_direct_config") {
  visibility = [ ":*" ]
  defines = [ "UNIT_TEST" ]
}
config("gtest_warnings") {
  if (is_win && is_clang) {
    # The Mutex constructor initializer list in gtest-port.cc is incorrectly
    # ordered. See
    # https://groups.google.com/d/msg/googletestframework/S5uSV8L2TX8/U1FaTDa6J6sJ.
    cflags = [ "-Wno-reorder" ]
  }
}
static_library("gtest") {
  testonly = true
  sources = [
    "$gtest_dir/include/gtest/gtest-death-test.h",
    "$gtest_dir/include/gtest/gtest-message.h",
    "$gtest_dir/include/gtest/gtest-param-test.h",
    "$gtest_dir/include/gtest/gtest-printers.h",
    "$gtest_dir/include/gtest/gtest-spi.h",
    "$gtest_dir/include/gtest/gtest-test-part.h",
    "$gtest_dir/include/gtest/gtest-typed-test.h",
    "$gtest_dir/include/gtest/gtest.h",
    "$gtest_dir/include/gtest/gtest_pred_impl.h",
    "$gtest_dir/include/gtest/internal/gtest-death-test-internal.h",
    "$gtest_dir/include/gtest/internal/gtest-filepath.h",
    "$gtest_dir/include/gtest/internal/gtest-internal.h",
    "$gtest_dir/include/gtest/internal/gtest-linked_ptr.h",
    "$gtest_dir/include/gtest/internal/gtest-param-util-generated.h",
    "$gtest_dir/include/gtest/internal/gtest-param-util.h",
    "$gtest_dir/include/gtest/internal/gtest-port.h",
    "$gtest_dir/include/gtest/internal/gtest-string.h",
    "$gtest_dir/include/gtest/internal/gtest-tuple.h",
    "$gtest_dir/include/gtest/internal/gtest-type-util.h",
    #"$gtest_dir/src/gtest-all.cc",  # Not needed by our build.
    "$gtest_dir/src/gtest-death-test.cc",
    "$gtest_dir/src/gtest-filepath.cc",
    "$gtest_dir/src/gtest-internal-inl.h",
    "$gtest_dir/src/gtest-port.cc",
    "$gtest_dir/src/gtest-printers.cc",
    "$gtest_dir/src/gtest-test-part.cc",
    "$gtest_dir/src/gtest-typed-test.cc",
    "$gtest_dir/src/gtest.cc",
  ]
  #if (gtest_include_multiprocess) {
  #  sources += [
  #    "../multiprocess_func_list.cc",
  #    "../multiprocess_func_list.h",
  #  ]
  #}
  #if (gtest_include_platform_test) {
  #  sources += [ "../platform_test.h" ]
  #}
  #if (is_mac || is_ios) {
  #  if (is_ios) {
  #    set_sources_assignment_filter([])
  #  }
  #  sources += [
  #    "../gtest_mac.h",
  #    "../gtest_mac.mm",
  #  ]
  #  if (gtest_include_platform_test) {
  #    sources += [ "../platform_test_mac.mm" ]
  #  }
  #  set_sources_assignment_filter(sources_assignment_filter)
  #}
  #if (is_ios) {
  #  sources += [
  #    "../coverage_util_ios.cc",
  #    "../coverage_util_ios.h",
  #  ]
  #}
  include_dirs = [ "$gtest_dir" ]
  all_dependent_configs = [ ":gtest_config" ]
  public_configs = [ ":gtest_direct_config" ]
  #configs -= [ "//build/config/compiler:chromium_code" ]
  #configs += [
  #  "//build/config/compiler:no_chromium_code",
    # Must be after no_chromium_code for warning flags to be ordered correctly.
  #  ":gtest_warnings",
  #]
}
source_set("gtest_main") {
  testonly = true
  sources = [
    "$gtest_dir/src/gtest_main.cc",
  ]
  deps = [
    ":gtest",
  ]
}

# ==================================================
# gmock

config("gmock_config") {
  # Gmock headers need to be able to find themselves.
  include_dirs = [ "$gmock_dir/include" ]
}
static_library("gmock") {
  testonly = true
  sources = [
    # Sources based on files in r173 of gmock.
    "$gmock_dir/include/gmock/gmock-actions.h",
    "$gmock_dir/include/gmock/gmock-cardinalities.h",
    "$gmock_dir/include/gmock/gmock-generated-actions.h",
    "$gmock_dir/include/gmock/gmock-generated-function-mockers.h",
    "$gmock_dir/include/gmock/gmock-generated-matchers.h",
    "$gmock_dir/include/gmock/gmock-generated-nice-strict.h",
    "$gmock_dir/include/gmock/gmock-matchers.h",
    "$gmock_dir/include/gmock/gmock-spec-builders.h",
    "$gmock_dir/include/gmock/gmock.h",
    "$gmock_dir/include/gmock/internal/gmock-generated-internal-utils.h",
    "$gmock_dir/include/gmock/internal/gmock-internal-utils.h",
    "$gmock_dir/include/gmock/internal/gmock-port.h",
    #"src/gmock-all.cc",  # Not needed by our build.
    "$gmock_dir/src/gmock-cardinalities.cc",
    "$gmock_dir/src/gmock-internal-utils.cc",
    "$gmock_dir/src/gmock-matchers.cc",
    "$gmock_dir/src/gmock-spec-builders.cc",
    "$gmock_dir/src/gmock.cc",
  ]
  # This project includes some stuff form gtest's guts.
  #include_dirs = [ "$gtest_dir/include" ]
  public_configs = [
    ":gmock_config",
    ":gtest_config",
  ]
}

static_library("gmock_main") {
  testonly = true
  sources = [
    "$gmock_dir/src/gmock_main.cc",
  ]
  deps = [
    ":gmock",
  ]
}

